<resources>
    <string name="app_name">Fasa7ny</string>
    <string name="trip_planner">Trip Planner</string>
    <string name="label">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="login_btn">login</string>
    <string name="signup">SignUp</string>
    <string name="signupActivityText">SignUp</string>
    <string name="email">Email</string>
    <string name="signup_btn">SignUp</string>
    <string name="where_to">Where to</string>
    <string name="how_many_days">How many days</string>
    <string name="how_many_hours_in_a_day">How many hours in a day</string>
    <string name="categories">Categories</string>
    <string name="activities">Activities</string>
    <string name="title_activity_maps">Map</string>
    <string name="reset">Reset</string>
    <string name="add_review">Add review</string>
    <string name="add">Add</string>
</resources>