<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_card_view"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_350sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:cardCornerRadius="@dimen/_10sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_tv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center_horizontal"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:hint="@string/label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:onClick="forgetPassword"
                    android:id="@+id/btn_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:text="@string/forget_password"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/blue"
                    android:text="@string/login_btn"
                    android:onClick="login"
                    app:cornerRadius="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"/>
                <Button
                    android:id="@+id/textButton_loginActivity_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signup"
                    android:onClick="register"
                    android:textColor="@color/blue"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>